--- a/src/components/Carousel/CenteredCarousel.css
+++ b/src/components/Carousel/CenteredCarousel.css
@@ -2,30 +2,33 @@
 .centered-carousel {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .centered-slide {
   transition: all 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transform-origin: center;
+  will-change: transform;
 }
 
 /* Todos os slides com qualidade original */
 .centered-carousel .swiper-slide {
   opacity: 1;
   filter: brightness(1);
+  backface-visibility: hidden;
+  transform: translateZ(0);
 }
 
 /* Slide ativo (central) - maior largura */
 .centered-carousel .swiper-slide-active {
-  transform: scale(1.15);
+  transform: scale(1.08);
   z-index: 3;
 }
 
 /* Desktop: card destacado com mais largura e menos altura */
 @media (min-width: 1024px) {
   .centered-carousel .swiper-slide-active {
-    transform: scaleX(1.2) scaleY(1.05);
+    transform: scaleX(1.12) scaleY(1.03);
   }
 }
 
